test/solc-verify/issues/Issue099.sol.gold
test/solc-verify/issues/Issue099.sol:11:5: solc-verify error: Deep copy between storage/memory arrays with reference types is not yet supported.
test/solc-verify/issues/Issue099.sol:9:3: solc-verify warning: Errors while translating function body, will be skipped
Test::[implicit_constructor]: OK
Test::test: SKIPPED
No errors found.
